--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 .hero-section {
-    background-image: url('./images/mercado.jpeg');
+    background-image: url('./images/mercado.png');
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -20,6 +20,53 @@
     background-color: rgba(255, 255, 255, 0.77);
 }
 
+.aspects-section {
+    text-align: center;
+    padding: 50px;
+}
+
+.aspects-section h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+
+.aspects-section h3 {
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+.features {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.feature {
+    width: 200px;
+    margin-bottom: 20px;
+}
+
+.feature .icon {
+    height: 100px;
+    width: 100px;
+    background-color: #816B62;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto 20px;
+}
+
+.feature .icon img {
+    max-width: 60%;
+    max-height: 60%;
+}
+
+.feature p {
+    font-size: 16px;
+    color: #333;
+}
 
 @media (max-width: 600px) {
     .hero-section {
