--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
     padding: 0;
     font-family: 'Playfair Display', serif;
 }
+section {
+    max-width: 1200px;
+    margin: auto;
+}
 .hero-section {
     background-image: url('./images/mercado.png');
     background-size: cover;
@@ -65,7 +69,7 @@
 }
 
 .feature p {
-    font-size: 16px;
+    font-size: 18px;
     color: #333;
 }
 
@@ -74,23 +78,38 @@
     padding: 20px;
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
     text-align: center;
+    margin: auto;
+    max-width: 800px;
+}
+.section-pymes {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
 }
 
+.section-usuarios {
+    display: flex;
+    align-items: center;
+}
 .section-pymes h2, .section-usuarios h2 {
-    color: #333;
+    color: #000;
     margin-bottom: 10px;
+    text-decoration: underline;
 }
 
 .section-pymes p, .section-usuarios p {
     color: #666;
     margin-bottom: 20px;
+    text-align: justify;
+    margin: 20px;
+    font-size: 22px;
 }
 
 .mockup-container img {
     width: 100%;
-    max-width: 400px;
+    /* max-width: 700px; */
     margin-bottom: 20px;
     border-radius: 10px;
 }
@@ -128,6 +147,10 @@
         top: 10px;
         left: 10px;
         height: 80px;
+    }
+
+    .section-pymes, .section-usuarios {
+        display: block;
     }
 
 
