--- a/styles.css
+++ b/styles.css
@@ -116,9 +116,9 @@ section {
 
 .contact-section {
     text-align: center;
-    padding: 40px;
+    padding: 35px;
     background-color: #fff;
-    border: solid 1px #000;
+    /* border: solid 1px #000; */
 }
 
 .contact-section h2 {
@@ -139,6 +139,39 @@ section {
     margin-bottom: 20px;
 }
 
+
+.social-footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.social-footer ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.social-footer li {
+    display: inline;
+    margin: 0 10px;
+}
+
+.social-footer a {
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+.social-footer img {
+    vertical-align: middle;
+    width: 24px;
+    height: 24px;
+    margin-right: 2px;
+}
+
+
 @media (max-width: 600px) {
     .hero-section {
         height: 50vh;
@@ -153,6 +186,9 @@ section {
         display: block;
     }
 
+    .contact-section {
+        padding: 15px;
+    }
 
     .image-container img {
         max-width: 100%;
